Add Nav & Header section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alivio-LandingPage - HTML5 & CSS3 | UI Practice</title>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--
-UI Design by:
-https://www.uistore.design/items/alivio-landing-page-for-figma/
+
+Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-landing-page-for-figma.jpg
+
 -->
+
+    <nav>
+      <div class="container">
+        <a href="#">
+          <h1>Alivio</h1>
+        </a>
+        <ul>
+          <li><a href="#">Why Alivio</a></li>
+          <li><a href="#">Solutions</a></li>
+          <li><a href="#">Community</a></li>
+          <li><a href="#">Pricing</a></li>
+        </ul>
+        <div class="cta">
+          <a href="#">Sign in</a>
+          <a class="btn" href="#">Start Trial</a>
+        </div>
+      </div>
+    </nav>
+
+    <header>
+      <div class="container">
+        <h2>Be aware, <span>Manage well.</span></h2>
+        <p>
+          Everyone experiences stress in different ways.
+          <span>
+            Let Alivio guide you, in a personalized journal
+          </span>
+          <span>
+            experience, to overcome your stress.
+          </span>
+        </p>
+        <a class="btn" href="">Find Your Way</a>
+      </div>
+    </header>
   </body>
 </html>
