Add - How it works section

--- a/index.html
+++ b/index.html
@@ -46,5 +46,58 @@ Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-land
         <a class="btn" href="">Find Your Way</a>
       </div>
     </header>
+
+    <main>
+      <div class="container header">
+        <div class="header-left">
+          <h4>How it works</h4>
+          <h3>
+            Understand & Release
+            <span>the stress in <span class="number">3</span> steps</span>
+          </h3>
+        </div>
+        <div class="header-right">
+          <p>
+            Alivio offers as many journals it takes, tackling different areas
+            such as anxiety, overwhelmedness, sadness, or anger, and a variety
+            of personal causes, to help you become aware of your emotions, and
+            guide you in how to manage stress.
+          </p>
+        </div>
+      </div>
+
+      <div class="container main-grid">
+        <section>
+          <h4 class="one">Personalize</h4>
+          <p>
+            Answer a quick survey about how you express yourself, what causes
+            you stress. and what area would you like to work on. This way, we
+            can fully personalize your journal!
+          </p>
+
+          <img src="https://source.unsplash.com/QeVmJxZOv3k/1600x900" alt="" />
+        </section>
+
+        <section>
+          <h4 class="two">Write & Understand</h4>
+          <p>
+            Write, draw, reflect, understand. Alivio will guide you through the
+            prompts and will help you manage your stress!
+          </p>
+
+          <img src="https://source.unsplash.com/zMQR294dVTs/1600x900" alt="" />
+        </section>
+
+        <section>
+          <h4 class="three">Alivio!</h4>
+          <p>
+            Now you are aware, and have a way to manage and overcome your own
+            stress. What are you waiting for? Alivio today!
+          </p>
+
+          <img src="https://source.unsplash.com/00ByEXKcSkA/1600x900" alt="" />
+        </section>
+      </div>
+    </main>
   </body>
 </html>
