Replace cdn images & complete main grid section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-land
             can fully personalize your journal!
           </p>
 
-          <img src="https://source.unsplash.com/QeVmJxZOv3k/1600x900" alt="" />
+          <img src="./assets/section-image-one.png" alt="" />
         </section>
 
         <section>
@@ -85,7 +85,7 @@ Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-land
             prompts and will help you manage your stress!
           </p>
 
-          <img src="https://source.unsplash.com/zMQR294dVTs/1600x900" alt="" />
+          <img src="./assets/section-image-two.png" alt="" />
         </section>
 
         <section>
@@ -95,7 +95,7 @@ Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-land
             stress. What are you waiting for? Alivio today!
           </p>
 
-          <img src="https://source.unsplash.com/00ByEXKcSkA/1600x900" alt="" />
+          <img src="./assets/section-image-three.png" alt="" />
         </section>
       </div>
     </main>
