Add - our product section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,43 @@ Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-land
       </div>
     </section>
 
+    <section>
+      <div class="container white-sec">
+        <div class="white-left">
+          <div class="left-image">
+            <img src="./assets/girlimage.png" alt="" />
+          </div>
+
+          <div class="left-card">
+            <h5>Customized for</h5>
+            <hr />
+            <img src="./assets/girlimage.png" alt="" />
+
+            <h4>Mikayla</h4>
+
+            <h3>Your custom contents</h3>
+
+            <ul>
+              <li>Understand Your Stress</li>
+              <li>Anger Management</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="white-right">
+          <h5>Our product</h5>
+          <h3>You tell us your stress, <span>We make your dairy</span></h3>
+          <p>
+            Everyone experiences it, and in different ways. <br />
+            Let Alivio guide you, in a personalized journal experience, to
+            overcome your stress
+          </p>
+
+          <a class="btn" href="">Find Your Way</a>
+        </div>
+      </div>
+    </section>
+
     <script>
       video = document.getElementById("customer-video");
       play_btn = document.getElementById("play-btn");
