Add - Footer section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@ Design : https://caphe.sfo2.cdn.digitaloceanspaces.com/assets/images/alivio-land
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <ul>
+          <li>
+            <a href=""><h1>Alivio</h1></a>
+          </li>
+          <li><a href="">Why Alivio</a></li>
+          <li><a href="">Solutions</a></li>
+          <li><a href="">Community</a></li>
+          <li><a href="">Pricing</a></li>
+        </ul>
+      </div>
+    </footer>
+
     <script>
       video = document.getElementById("customer-video");
       play_btn = document.getElementById("play-btn");
